2002-09-05 TADA Tadahi <sho@spc.gr.jp>
	* tdiary/blogwiki_style.rb: support new Wiki style in tDiary 2.1.2.20050905.
	* plugin/blog-style.rb: overwrite subtitle_link to delete section anchor.
	* plugin/whatsnew-list.rb: title set to 'RSS' in link element of RSS
	AutoDiscovery.

2002-08-29 TADA Tadahi <sho@spc.gr.jp>
	* plugin/title-link.rb: disable link in day mode.
	* README*: add about title-link.rb plugin.

2002-08-26 TADA Tadahi <sho@spc.gr.jp>
	* plugin/blog-category.rb: support Plugin#title_proc, new feature after
	  tDiary 2.1.2.20050826.
	* add new plugin: title-link.rb: make permalink include all of title.
	* blogwiki_style.rb: remove about category.

2002-08-25 TADA Tadahi <sho@spc.gr.jp>
	* plugin/blog-category.rb: specify genre of preference.

2005-07-29 TADA Tadashi <sho@spc.gr.jp>
	* plugin/blog-category.rb: fix broken title after changing comment status.

2005-07-20 TADA Tadashi <sho@spc.gr.jp>
	* release 2.1.2.

2005-07-13 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.conf.sample: add list of bots.

2005-06-30 TADA Tadashi <sho@spc.gr.jp>
	* plugin/blog-style.rb: show archive serial in <title> when month mode.

2005-06-22 TADA Tadashi <sho@spc.gr.jp>
	* plugin/blog_category.rb: define Diary#stripped_title in comment mode.

2005-06-09 TADA Tadashi <sho@spc.gr.jp>
	* release 2.1.1.

2005-06-04 TADA Tadashi <sho@spc.gr.jp>
	* plugin/archive.rb: support navi_user_month.

2005-06-03 TADA Tadashi <sho@spc.gr.jp>
	* plugin/blog-style.b, tdiary/blogwiki_style.rb: support 'before/after n days' mode.

2005-04-06 TADA Tadashi <sho@spc.gr.jp>
	* plugin/recent-entry.rb: fix bug about escape title.

2005-03-22  URABE Shyouhei  <shyouhei@ice.uec.ac.jp>
	* tdiary/blogrd_style.rb (RD::RD2BlogVisitor::apply_to_Headline): bug fix in headline levels

2005-03-09 TADA Tadashi <sho@spc.gr.jp>
	* recent-entry.rb, recent-entry2.rb: remove HTML tag in title.

2004-06-27 TADA Tadashi <sho@spc.gr.jp>
	* release 2.0.0.

2004-06-18 TADA Tadashi <sho@spc.gr.jp>